website/static/css/style.css
html, body {
    overflow: hidden;
    height: 100%;
    background-color: black;
    color: white;
    font-family: Roboto, sans-serif;
}
body {
    display: flex;
    flex-direction: column;
}
/* Scroll bar stylings */
::-webkit-scrollbar {
    width: 10px;
    height: 10px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    background: var(--lightestgrey); 
  }
  
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: #888; 
    border-radius: 5px;
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #555; 
  }
a {
    text-decoration: none;
}
.content-container {
    display: flex;
    flex-wrap: nowrap;
    height: 100%;
    overflow: hidden;
    flex: 1;
    margin-top: 0.5rem;
}
.content-container:has(.main-container) {
    margin: 0;
}
.sidebar {
    white-space: nowrap;
    margin: 0.5rem 0;
    border-radius: 0 0.5rem 0.5rem 0;
    width: min-content;
}
.sidebar .title {
    margin: 1rem 2rem;
}
.sidebar ul {
    margin: 0 0 1rem 1.5rem;
}
.sidebar button {
    background: none;
    border: none;
    cursor: default;
    color: inherit;
}
.link-button {
    background: none;
    border: none;
    color: white;
    cursor: pointer;
    font-size: 1em;
    font-family: Roboto;
    padding: 6px;
}
.link-button:hover {
  color: white;
  text-decoration: none;
}
.cursed {
  color: blue;
}
.link-button:focus {
    outline: none;
}
.text-dropdown-item {
    padding: var(--bs-dropdown-item-padding-y) var(--bs-dropdown-item-padding-x);
}

@media (max-width: 544px) {
    .content-container {
        flex-direction: column;
    }
    .sidebar button {
        cursor: pointer;
    }
    .sidebar .hidden {
        display: none;
    }
    .main-container {
        margin-left: 0!important;
    }
}

